# print_bridge

./: .eslintrc  .pre-commit-config.yaml  .semgrepignore  DOCUMENTATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: Dockerfile  README.md  pyproject.toml
agent/print_bridge_agent/: __main__.py  cli.py  client.py  daemon.py  printers.py
print_bridge/: events.py  hooks.py  install.py  modules.txt  tasks.py
print_bridge/api/: agent.py  print_api.py
print_bridge/config/: desktop.py
print_bridge/print_bridge/doctype/print_agent/: print_agent.js  print_agent.json  print_agent.py  test_print_agent.py
print_bridge/print_bridge/doctype/print_bridge_printer/: print_bridge_printer.json  print_bridge_printer.py
print_bridge/print_bridge/doctype/print_bridge_settings/: print_bridge_settings.json  print_bridge_settings.py
print_bridge/print_bridge/doctype/print_format_print_setting/: print_format_print_setting.json  print_format_print_setting.py
print_bridge/print_bridge/doctype/print_job/: print_job.js  print_job.json  print_job.py
print_bridge/print_bridge/doctype/print_routing_rule/: print_routing_rule.json  print_routing_rule.py
print_bridge/print_bridge/doctype/printer_group/: printer_group.json  printer_group.py
print_bridge/print_bridge/doctype/printer_group_member/: printer_group_member.json  (+1 more)
print_bridge/public/js/: print_bridge.js
print_bridge/transport/: __init__.py  agent_transport.py  base.py  browser_qz.py  cloud_ipp.py  cups_direct.py  raw_socket.py
print_bridge/utils/: jobs.py  renderer.py  resolver.py
