[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "print-bridge-agent"
version = "0.1.0"
description = "Office-side agent for the Print Bridge Frappe/ERPNext app — pulls print jobs from a bench and prints them on local CUPS printers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Aerele Technologies" }]
keywords = ["frappe", "erpnext", "printing", "cups", "print-bridge"]
dependencies = ["requests>=2.25"]

[project.scripts]
print-bridge-agent = "print_bridge_agent.cli:main"

[project.urls]
Homepage = "https://github.com/aerele/print_bridge"

[tool.setuptools.packages.find]
where = ["."]
include = ["print_bridge_agent*"]
